# h2agent

./: .dockerignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Dockerfile.coverage  Dockerfile.coverage.ct  Dockerfile.coverage.ut  Dockerfile.http1  Dockerfile.training  LICENSE  README.md  build-native.sh  build.sh  build_all.sh  h2a.sh  h2agent  h2agent.debug  pull_request_template.md  resume.txt  run.sh  unit-test  ut.sh
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
HACKATHON/: entrena_modelo.sh  matching.json  provision.json
benchmark/: repeat.sh  server-provision.json  start.sh
benchmark/analysis/: collect-prometheus-stats.py  compare.py  monitor.sh  report.sh
cmake/: build_type.cmake  compiler_flags.cmake  os_type.cmake  static_linking.cmake
ct/: Dockerfile  clusters.md  test.sh
ct/src/: conftest.py  pytest.ini  requirements.txt
demo/: README.md  provisions.json  run.sh  server-provision.json  test.src
demo/matching/: server-matching.json
demo/provisions/: 1.id-1.json  2.id-2.json  3.id-3.json  4.id-unassigned.json  5.id-400-default.json  6.id-2-deletion.json  7.id-2-get404-after-deletion.json
docker/h2agent_build/: Dockerfile
docs/api/: MAINTENANCE.md  README.md  generate_openapi_schemas.py  index.html  openapi.yaml  serve-api-docs.sh
docs/developers/: AggregatedKeys.md  ChainVariables.md  SseVaultStreaming.md  TechnicalDebtAndImprovements.md
docs/doxygen/: Doxyfile
helm/ct-h2agent/: Chart.yaml  values.yaml
helm/h2agent/: Chart.yaml  native-helpers.bash  native-helpers.src  values.yaml
kata/: README.md  evaluate.sh  expose_solutions.sh  hide_solutions.sh
kata/.githooks/: pre-commit
kata/01.Matching_Algorithms_I____FullMatching/: README.md  SOLUTION.md  server-matching.json  solution.txt  test.sh
kata/01.server.Matching_Algorithms_I____FullMatching/: SOLUTION.md.enc  server-matching.json.enc  server-provision.json
kata/02.Matching_Algorithms_II___FullMatchingRegexReplace/: README.md  matching.json  provision.json  solution.txt  test.sh
kata/02.server.Matching_Algorithms_II___FullMatchingRegexReplace/: SOLUTION.md  SOLUTION.md.enc  server-provision.json  server-provision.json.enc
kata/03.Matching_Algorithms_III__PriorityMatchingRegex/: README.md  solution.txt  test.sh
kata/03.Matching_Algorithms_III__RegexMatching/: README.md  server-matching.json  server-provision.json  solution.txt  test.sh
kata/03.server.Matching_Algorithms_III__RegexMatching/: SOLUTION.md  SOLUTION.md.enc  server-provision.json.enc  test.sh
src/: CMakeLists.txt  main.cpp  version.cpp.in  version.hpp
src/http2/: CMakeLists.txt  MyAdminHttp2Server.cpp  MyAdminHttp2Server.hpp  MyTrafficHttp2Client.cpp  MyTrafficHttp2Client.hpp  MyTrafficHttp2Server.cpp  MyTrafficHttp2Server.hpp  functions.cpp  functions.hpp
src/http2Server/: CMakeLists.txt  MyAdminHttp2Server.cpp  MyAdminHttp2Server.hpp  MyHttp2Server.cpp  MyHttp2Server.hpp  MyTrafficHttp2Server.cpp  MyTrafficHttp2Server.hpp  functions.cpp  functions.hpp
src/jsonSchema/: AdminSchemas.hpp  CMakeLists.txt  JsonSchema.cpp  JsonSchema.hpp
src/model/: AdminClientEndpoint.cpp  AdminClientEndpoint.hpp  AdminClientEndpointData.cpp  AdminClientEndpointData.hpp  AdminClientProvision.cpp  AdminClientProvision.hpp  AdminClientProvisionData.cpp  AdminClientProvisionData.hpp  AdminData.cpp  AdminData.hpp  AdminMatchingData.cpp  AdminMatchingData.hpp  AdminProvision.cpp  AdminProvision.hpp  AdminProvisionData.cpp  AdminProvisionData.hpp  AdminSchema.cpp  AdminSchema.hpp  AdminSchemaData.cpp  AdminSchemaData.hpp  AdminServerMatchingData.cpp  AdminServerMatchingData.hpp  AdminServerProvision.cpp  AdminServerProvision.hpp  AdminServerProvisionData.cpp  AdminServerProvisionData.hpp  BodyData.cpp  BodyData.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  DataPart.cpp  DataPart.hpp  FileManager.cpp  FileManager.hpp  GlobalVariable.cpp  GlobalVariable.hpp  GlobalVariablesData.cpp  GlobalVariablesData.hpp  Map.hpp  (+56 more)
st/: globals.json  last.sh  provision.json  provision.json.in  request.json  schema.json  server-provision.json  start.sh
tools/: CMakeLists.txt  README  README.md  common.bash  common.src  coverage.sh  dynamic-response-delay-provision.sh  events-schedule.sh  healthcheck-provision.sh  helpers.bash  helpers.src  matching.sh  play-grafana.sh  provision.sh  schemas.sh  see_matching.sh  see_provisions.sh  server-matching_FULLMATCHING_IGNORE_QPARAMS.json  server-matching_FULLMATCHING_SORT_QPARAMS.json  server-provision_BAR1.json  sse-vault-events.sh  test-max-concurrent-streams.sh  test.sh  traffic.sh  training.sh  url.sh  valgrind.sh
tools/h2client/: CMakeLists.txt  main.cpp
tools/udp-client/: CMakeLists.txt  main.cpp
ut/: CMakeLists.txt
ut/http2Client/: CMakeLists.txt  http2Client_integration_test.cpp  http2Client_test.cpp  myTrafficHttp2Client.cpp
ut/http2Server/: CMakeLists.txt  http2Server_integration_test.cpp  http2Server_test.cpp  myAdminHttp2Server.cpp  myTrafficHttp2Server.cpp
ut/jsonSchema/: CMakeLists.txt  jsonSchema.cpp  jsonSchema_test.cpp
ut/model/: CMakeLists.txt  model_test.cpp
ut/model/AdminData/: CMakeLists.txt  configure.cpp  test.cpp  transform.cpp
ut/model/Configuration/: CMakeLists.txt  configuration.cpp
ut/model/DataPart/: CMakeLists.txt  datapart.cpp
ut/model/FileSystem/: CMakeLists.txt  fileManager.cpp  safeFile.cpp
ut/model/Functions/: CMakeLists.txt  functions.cpp
ut/model/Keys/: CMakeLists.txt  keys.cpp
ut/model/ServerData/: configure.cpp
ut/model/Storage/: CMakeLists.txt  globalVariable.cpp  mockClientData.cpp  mockClientEvent.cpp  mockClientEventsHistory.cpp  mockServerData.cpp  mockServerEvent.cpp  mockServerEventsData.cpp  mockServerEventsHistory.cpp  mockServerKeyEvent.cpp  mockServerKeyEvents.cpp  sseManager.cpp  typeConverter.cpp  vault.cpp  waitManager.cpp
ut/model/Transformation/: CMakeLists.txt  clientTransform.cpp  transform.cpp
ut/model/UnixSockets/: CMakeLists.txt  safeSocket.cpp  socketManager.cpp
(+506 files in other folders)
